--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <!-- NavBar -->
   <div class="header">
     <div nav-links>
-      <button class="nav-button" onclick="navigateTo('../index.html')">STUDio</button>
-      <button class="nav-button" onclick="navigateTo('../homepage.html')">Home</button>
+      <button class="nav-button" onclick="navigateTo('index.html')">STUDio</button>
+      <button class="nav-button" onclick="navigateTo('homepage.html')">Home</button>
       <button class="nav-button" onclick="navigateTo('AboutUS/abts.html')">About Us</button>
 
     </div>
@@ -27,7 +27,7 @@
       <p class="subtext">Master the Art of Effective Studying</p>
     </div>
     <div class="quote-right">
-      <button onclick="navigateTo('../homepage.html')" class="GTS">GET STARTED</button>
+      <button onclick="navigateTo('homepage.html')" class="GTS">GET STARTED</button>
     </div>
   </div>
 
