--- a/homepage.html
+++ b/homepage.html
@@ -12,8 +12,8 @@
   <!-- NavBar -->
   <div class="header">
     <div nav-links>
-      <button class="nav-button" onclick="navigateTo('../index.html')">STUDio</button>
-      <button class="nav-button" onclick="navigateTo('../homepage.html')">Home</button>
+      <button class="nav-button" onclick="navigateTo('index.html')">STUDio</button>
+      <button class="nav-button" onclick="navigateTo('homepage.html')">Home</button>
       <button class="nav-button" onclick="navigateTo('AboutUS/abts.html')">About Us</button>
     </div>
   </div>
